Fixed carousel button being cut off

--- a/frontend/src/components/Carousel/Carousel.scss
+++ b/frontend/src/components/Carousel/Carousel.scss
@@ -27,10 +27,10 @@
   }
 
   .left-button {
-    left: 0;
+    left: 1px;
   }
 
   .right-button {
-    right: 0;
+    right: 1px;
   }
 }
